final for this night

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-xs-3 col-xs-offset-1">
-                            <button disabled class="btn btn-danger">Остановить</button>
+                            <button class="btn btn-danger" id="stop">Остановить</button>
                         </div>
                         <div class="col-xs-5">
                             <button id="run" class="btn btn-success">Запустить</button>
